Fix color-contrast issues in Query and Quick Search pages

--- a/src/shared/components/query/quickSearch/styles.module.scss
+++ b/src/shared/components/query/quickSearch/styles.module.scss
@@ -25,7 +25,7 @@
     left: 50%;
     top: -5px;
     transform: translateX(-50%);
-    color: #ccc;
+    color: #757575;
     font-size: 11.5px;
 }
 
